# Vita3K

./: .travis.yml  CMakeLists.txt  appveyor.yml  gen-windows.bat
.github/workflows/: c-cpp.yml
data/internal/: nids_functions.sql  nids_libraries.sql  nids_modules.sql  nids_script.sql
interface/: CMakeLists.txt
modules/: CMakeLists.txt
tools/gen-modules/: gen-modules.cpp
vita3k/: CMakeLists.txt  interface.cpp  main.cpp
vita3k/app/src/: app_init.cpp
vita3k/config/: CMakeLists.txt
vita3k/config/include/config/: state.h
vita3k/config/src/: config.cpp
vita3k/cpu/: CMakeLists.txt
vita3k/cpu/include/cpu/: arm.h  functions.h  injection.h  state.h  util.h
vita3k/cpu/src/: arm.cpp  cpu.cpp
vita3k/gui/src/: disassembly_dialog.cpp  game_context_menu.cpp  gui.cpp  threads_dialog.cpp
vita3k/host/include/host/: pup_types.h
vita3k/host/src/: load_self.cpp  pkg.cpp  pup.cpp  sfo.cpp
vita3k/io/include/io/: util.h
vita3k/kernel/include/kernel/: state.h
vita3k/kernel/src/: kernel.cpp
vita3k/kernel/src/thread/: sync_primitives.cpp  thread.cpp
vita3k/module/include/module/: bridge.h  read_arg.h
vita3k/modules/: module_parent.cpp
vita3k/modules/SceAvPlayer/: SceAvPlayer.cpp
vita3k/modules/SceFiber/: SceFiber.cpp  SceFiber.h
vita3k/modules/SceGxm/: SceGxm.cpp
vita3k/modules/SceKernelModulemgr/: SceModulemgr.cpp
vita3k/modules/SceKernelThreadMgr/: SceThreadmgr.cpp
vita3k/modules/SceLibKernel/: SceLibKernel.cpp
vita3k/modules/include/modules/: module_parent.h
vita3k/ngs/src/: ngs.cpp
vita3k/nids/: CMakeLists.txt
vita3k/nids/src/: nids.cpp
vita3k/renderer/include/renderer/gl/: types.h
vita3k/renderer/src/gl/: draw.cpp  load_shaders.cpp
vita3k/shader/include/shader/: decoder_detail.h  usse_translator.h
vita3k/util/: CMakeLists.txt
vita3k/util/include/util/: preprocessor.h  string_utils.h
vita3k/util/src/: util.cpp
